--- a/arch/arm64/boot/dts/freescale/imx8mm.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mm.dtsi
@@ -677,7 +677,7 @@
 					pgc_vpu_g1: power-domain@7 {
 						#power-domain-cells = <0>;
 						power-domains =
-						<&vpumix_blk_ctl IMX8MM_BLK_CTL_PD_VPU_BUS>;
+						<&vpumix_blk_ctl IMX8MM_BLK_CTL_PD_VPU_H1>;
 						reg = <IMX8MM_POWER_DOMAIN_VPUG1>;
 						clocks = <&clk IMX8MM_CLK_VPU_G1_ROOT>;
 					};
@@ -685,7 +685,7 @@
 					pgc_vpu_g2: power-domain@8 {
 						#power-domain-cells = <0>;
 						power-domains =
-						<&vpumix_blk_ctl IMX8MM_BLK_CTL_PD_VPU_BUS>;
+						<&vpumix_blk_ctl IMX8MM_BLK_CTL_PD_VPU_H1>;
 						reg = <IMX8MM_POWER_DOMAIN_VPUG2>;
 						clocks = <&clk IMX8MM_CLK_VPU_G2_ROOT>;
 					};
@@ -693,7 +693,7 @@
 					pgc_vpu_h1: power-domain@9 {
 						#power-domain-cells = <0>;
 						power-domains =
-						<&vpumix_blk_ctl IMX8MM_BLK_CTL_PD_VPU_BUS>;
+						<&vpumix_blk_ctl IMX8MM_BLK_CTL_PD_VPU_H1>;
 						reg = <IMX8MM_POWER_DOMAIN_VPUH1>;
 						clocks = <&clk IMX8MM_CLK_VPU_H1_ROOT>;
 					};
@@ -1155,6 +1155,47 @@
 			power-domain-names = "vpumix", "vpu-g1", "vpu-g2", "vpu-h1";
 			clocks = <&clk IMX8MM_CLK_VPU_DEC_ROOT>, <&clk IMX8MM_CLK_VPU_G1_ROOT>,
 				 <&clk IMX8MM_CLK_VPU_G2_ROOT>, <&clk IMX8MM_CLK_VPU_H1_ROOT>;
+		};
+
+		gpu_3d: gpu@38000000 {
+			compatible = "vivante,gc";
+			reg = <0x38000000 0x8000>;
+			interrupts = <GIC_SPI 3 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&clk IMX8MM_CLK_GPU_AHB>,
+			         <&clk IMX8MM_CLK_GPU_BUS_ROOT>,
+			         <&clk IMX8MM_CLK_GPU3D_ROOT>,
+			         <&clk IMX8MM_CLK_GPU3D_ROOT>;
+			clock-names = "reg", "bus", "core", "shader";
+			assigned-clocks = <&clk IMX8MM_CLK_GPU3D_CORE>,
+			                  <&clk IMX8MM_CLK_GPU_AXI>,
+			                  <&clk IMX8MM_CLK_GPU_AHB>,
+			                  <&clk IMX8MM_GPU_PLL_OUT>;
+			assigned-clock-parents = <&clk IMX8MM_GPU_PLL_OUT>,
+			                         <&clk IMX8MM_SYS_PLL1_800M>,
+			                         <&clk IMX8MM_SYS_PLL1_800M>;
+			assigned-clock-rates = <0>, <0>,<400000000>,<1000000000>;
+			power-domains = <&pgc_gpu>;
+			status = "disabled";
+		};
+
+		gpu_2d: gpu@38008000 {
+			compatible = "vivante,gc";
+			reg = <0x38008000 0x8000>;
+			interrupts = <GIC_SPI 25 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&clk IMX8MM_CLK_GPU_AHB>,
+			         <&clk IMX8MM_CLK_GPU_BUS_ROOT>,
+			         <&clk IMX8MM_CLK_GPU2D_ROOT>;
+			clock-names = "reg", "bus", "core";
+			assigned-clocks = <&clk IMX8MM_CLK_GPU2D_CORE>,
+			                  <&clk IMX8MM_CLK_GPU_AXI>,
+			                  <&clk IMX8MM_CLK_GPU_AHB>,
+			                  <&clk IMX8MM_GPU_PLL_OUT>;
+			assigned-clock-parents = <&clk IMX8MM_GPU_PLL_OUT>,
+			                         <&clk IMX8MM_SYS_PLL1_800M>,
+			                         <&clk IMX8MM_SYS_PLL1_800M>;
+			assigned-clock-rates = <0>, <0>,<400000000>,<1000000000>;
+			power-domains = <&pgc_gpu>;
+			status = "disabled";
 		};
 
 		gic: interrupt-controller@38800000 {
